clean some info

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : Genes and Coinflips
 tagline: Site Tagline
 author :
   name : Ivan Kryukov
-  email : ikryukov (at) ucalgary (dot) com
+  email : 
   github : ivan-kryukov
   twitter : ikryukov
 
